# fluent-localization

./: Cargo.toml  LICENSE  README.md
.github/: dependabot.yml
.github/workflows/: clippy.yml
bindgen/: Cargo.toml
bindgen/src/: README.md  lib.rs
loader/: Cargo.toml
loader/src/: lib.rs
