[package]
name = "fluent-localization-bindgen"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
fluent-bundle.workspace = true
fluent-syntax.workspace = true
quote.workspace = true
syn.workspace = true
proc-macro2.workspace = true
fluent-localization-loader.workspace = true
