[package]
name = "fluent-localization-bindgen"
version = "1.0.4"
edition = "2021"
keywords = ["fluent", "localization", "bindgen"]
description = "Easy loading of fluent localization resources and generating code bindings for them"
license.workspace = true
categories.workspace = true
homepage.workspace = true
repository.workspace = true

[lib]
proc-macro = true

[dependencies]
fluent-bundle.workspace = true
fluent-syntax.workspace = true
quote.workspace = true
syn.workspace = true
proc-macro2.workspace = true
fluent-localization-loader.workspace = true
