[package]
name = "fluent-localization-loader"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tracing.workspace = true
fluent-bundle.workspace = true
intl-memoizer.workspace = true
anyhow.workspace = true
fluent-syntax.workspace = true
unic-langid.workspace = true
