[package]
name = "fluent-localization-loader"
version = "1.0.4"
edition = "2021"
keywords = ["fluent", "localization"]
description = "Easy loading of fluent localization resources"
license.workspace = true
categories.workspace = true
homepage.workspace = true
repository.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tracing.workspace = true
fluent-bundle.workspace = true
intl-memoizer.workspace = true
anyhow.workspace = true
fluent-syntax.workspace = true
unic-langid.workspace = true
